--- a/app/components/Products/TopProductsFilter/topproductsfilter.css
+++ b/app/components/Products/TopProductsFilter/topproductsfilter.css
@@ -16,22 +16,25 @@ body {
   .product-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
     padding: 0 100px;
-    width: 100%;
+    width: 97%;
     cursor: pointer;
+    gap: 3px;
   }
   
   .product-card {
     border: none;
-    padding: 15px;
+    padding: 15px 15px 30px 15px;
+    height: 330px;
     text-align: center;
     background: #fff;
     transition: transform 0.2s;
+    border-top-right-radius: 8px;
+    border-bottom-left-radius: 8px;
   }
   
   .product-card:hover {
-    transform: scale(1.05);
+    background: #e7e7e7;
   }
   
   .product-card img {
@@ -74,11 +77,11 @@ body {
     margin-bottom: 30px;
   }
   
-  button:hover {
+  .buttons button:hover {
     background-color: #9e9e9e;
   }
   
-  button.active {
+  .buttons button.active {
     background-color: red;
     color: white;
   }
@@ -91,4 +94,21 @@ body {
   .buttonlast {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
+  }
+
+  .button-1 {
+    width: 100%;
+    padding: 6px 0;
+    background-color: red;
+    margin-bottom: 60px;
+    color: white;
+    font-weight: 400;
+    font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+  }
+
+  .button-1:hover {
+    background-color: rgb(157, 8, 8);
   }
