--- a/app/components/Timer/timer.css
+++ b/app/components/Timer/timer.css
@@ -10,6 +10,7 @@
     justify-content: flex-end; /* Align to the right */
     align-items: center;
     padding: 0 20px;
+    margin-bottom: 50px;
   }
   
   .timer-content{
